objects/SSO_Profile_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ProfileId__c</fullName>
        <label>ProfileId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRole__c</fullName>
        <label>UserRole</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SSO_Profile_Mapping</label>
</CustomObject>